Add a privacy policy page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
 
         <footer data-aos="fade-up">
             &copy; 2025 Ink Apps • <a href="/terms/">Terms & Conditions</a> •
-            All Rights Reserved
+            <a href="/privacy/">Privacy Policy</a> • All Rights Reserved
         </footer>
 
         <!-- AOS Script -->
